# ETUDELINE.LIVE

./: .replit  database.py  main.py  models.py  pnpm-lock.yaml  pyproject.toml  render.yaml  replit.md
artifacts/etudeline/: main.py  models.py  requirements.txt
artifacts/etudeline-web/: index.html  package.json
artifacts/etudeline-web/.replit-artifact/: artifact.toml
artifacts/etudeline/.replit-artifact/: artifact.edit.toml
artifacts/etudeline/templates/: dashboard_admin.html  dashboard_etudiant.html  dashboard_prof.html  documents_etudiant.html
static/: manifest.json  offline.html
templates/: aide_paiement.html  chapitre_detail.html  dashboard_admin.html  dashboard_etudiant.html  dashboard_prof.html  dashboard_prof_new.html  index.html  lecteur_fichiers.html  login.html  messages.html  messages_etudiant.html
